deployment/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: proxy
